--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-945.8KB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇰🇷 韩国-1.22MB/s(Youtube:不良林), server: 13.209.18.199, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-976.0KB/s(Youtube:不良林), server: 42.157.195.230, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-358.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-1.28MB/s(Youtube:不良林), server: 54.179.88.143, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-243.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-257.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-1.51MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1019.5KB/s(Youtube:不良林), server: 14.152.92.76, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇹🇭 泰国-270.7KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-759.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-325.1KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-200.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-945.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-243.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.3KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-945.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-243.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.3KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-945.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-243.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.3KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-945.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-243.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.3KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-945.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-243.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.3KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-945.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-243.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.3KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-945.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-358.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-243.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.3KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
