--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-333.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-202.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇹🇭 泰国-270.7KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-257.6KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65069, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-759.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: 42.157.195.242, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-976.0KB/s(Youtube:不良林), server: 42.157.195.230, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-254.2KB/s(Youtube:不良林), server: 42.157.195.233, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-779.9KB/s(Youtube:不良林), server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.70, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3, server: 14.152.92.70, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-223.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-779.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-779.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-779.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-779.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-779.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-779.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-270.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-779.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
