--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-332.9KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-241.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-525.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-248.5KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-294.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-172.7KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
-  - {name: 🇨🇳 中国-619.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
-  - {name: 🇨🇳 中国-213.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-339.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-317.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-380.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-366.6KB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-489.7KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-744.5KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-18.15MB/s(Youtube:不良林), server: a01-cn-s1k111.cdnlive.straycloud.xyz, port: 604, type: ss, cipher: aes-128-gcm, password: 2bfd73bb-fb0c-4c1a-9d4f-92347b8caa32}
+  - {name: 🇨🇳 中国-229.0KB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-332.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-525.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-248.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-172.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-366.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-744.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-332.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-525.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-248.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-172.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-366.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-744.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-332.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-525.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-248.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-172.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-366.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-744.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-332.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-525.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-248.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-172.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-366.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-744.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-332.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-525.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-248.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-172.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-366.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-744.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-332.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-525.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-248.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-172.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-366.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-744.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-332.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-241.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-525.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-248.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-172.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-619.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-339.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-366.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-744.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
